# api/api_folder.go
@@ -392,6 +392,96 @@ func (a *FolderAPIService) GetFolderHistoryExecute(r ApiGetFolderHistoryRequest)
 	return localVarReturnValue, localVarHTTPResponse, nil
 }
 
+type ApiRemoveFolderCoverRequest struct {
+	ctx context.Context
+	ApiService *FolderAPIService
+	folderID string
+}
+
+func (r ApiRemoveFolderCoverRequest) Execute() (*http.Response, error) {
+	return r.ApiService.RemoveFolderCoverExecute(r)
+}
+
+/*
+RemoveFolderCover Remove the cover image of a folder
+
+ @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
+ @param folderID Folder ID
+ @return ApiRemoveFolderCoverRequest
+*/
+func (a *FolderAPIService) RemoveFolderCover(ctx context.Context, folderID string) ApiRemoveFolderCoverRequest {
+	return ApiRemoveFolderCoverRequest{
+		ApiService: a,
+		ctx: ctx,
+		folderID: folderID,
+	}
+}
+
+// Execute executes the request
+func (a *FolderAPIService) RemoveFolderCoverExecute(r ApiRemoveFolderCoverRequest) (*http.Response, error) {
+	var (
+		localVarHTTPMethod   = http.MethodDelete
+		localVarPostBody     interface{}
+		formFiles            []formFile
+	)
+
+	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "FolderAPIService.RemoveFolderCover")
+	if err != nil {
+		return nil, &GenericOpenAPIError{error: err.Error()}
+	}
+
+	localVarPath := localBasePath + "/folder/{folderID}/cover"
+	localVarPath = strings.Replace(localVarPath, "{"+"folderID"+"}", url.PathEscape(parameterValueToString(r.folderID, "folderID")), -1)
+
+	localVarHeaderParams := make(map[string]string)
+	localVarQueryParams := url.Values{}
+	localVarFormParams := url.Values{}
+
+	// to determine the Content-Type header
+	localVarHTTPContentTypes := []string{}
+
+	// set Content-Type header
+	localVarHTTPContentType := selectHeaderContentType(localVarHTTPContentTypes)
+	if localVarHTTPContentType != "" {
+		localVarHeaderParams["Content-Type"] = localVarHTTPContentType
+	}
+
+	// to determine the Accept header
+	localVarHTTPHeaderAccepts := []string{}
+
+	// set Accept header
+	localVarHTTPHeaderAccept := selectHeaderAccept(localVarHTTPHeaderAccepts)
+	if localVarHTTPHeaderAccept != "" {
+		localVarHeaderParams["Accept"] = localVarHTTPHeaderAccept
+	}
+	req, err := a.client.prepareRequest(r.ctx, localVarPath, localVarHTTPMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, formFiles)
+	if err != nil {
+		return nil, err
+	}
+
+	localVarHTTPResponse, err := a.client.callAPI(req)
+	if err != nil || localVarHTTPResponse == nil {
+		return localVarHTTPResponse, err
+	}
+
+	localVarBody, err := io.ReadAll(localVarHTTPResponse.Body)
+	localVarHTTPResponse.Body.Close()
+	localVarHTTPResponse.Body = io.NopCloser(bytes.NewBuffer(localVarBody))
+	if err != nil {
+		return localVarHTTPResponse, err
+	}
+
+	if localVarHTTPResponse.StatusCode >= 300 {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: localVarHTTPResponse.Status,
+		}
+		return localVarHTTPResponse, newErr
+	}
+
+	return localVarHTTPResponse, nil
+}
+
 type ApiScanFolderRequest struct {
 	ctx context.Context
 	ApiService *FolderAPIService
