# docs/swagger.yaml
@@ -1311,6 +1311,28 @@ paths:
       tags:
       - Folder
   /folder/{folderID}/cover:
+    delete:
+      operationId: RemoveFolderCover
+      parameters:
+      - description: Folder ID
+        in: path
+        name: folderID
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - SessionAuth: []
+      summary: Remove the cover image of a folder
+      tags:
+      - Folder
     patch:
       operationId: SetFolderCover
       parameters:
