# routers/api/v1/api.go
@@ -39,7 +39,7 @@ func Routes(_ context_service.AppContext) *router.Router {
 
 		r.Group("/{mediaID}", func() {
 			r.Get("/info", router.RequireSignIn, media_api.GetMediaInfo)
-			r.Get(".{extension}", router.RequireSignIn, media_api.GetMediaImage)
+			r.Get(".{extension}", router.RequirePermissionsMedia, media_api.GetMediaImage)
 			r.Get("/stream", router.RequireSignIn, media_api.StreamVideo)
 			r.Get("/{chunkName}", router.RequireSignIn, media_api.StreamVideo)
 			r.Patch("/liked", router.RequireSignIn, media_api.SetMediaLiked)
@@ -98,6 +98,7 @@ func Routes(_ context_service.AppContext) *router.Router {
 		r.Group("/{folderID}", func() {
 			r.Post("/scan", file_api.ScanDir)
 			r.Patch("/cover", file_api.SetFolderCover)
+			r.Delete("/cover", file_api.RemoveFolderCover)
 		})
 
 		r.Post("", file_api.CreateFolder)
